--- a/index.html
+++ b/index.html
@@ -83,14 +83,13 @@
 
     <!-- Features Section -->
     <section class="features">
-        <div class="container">
-            <div class="features-grid">
+        <div class="container">            <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon">
                         <i class="fas fa-shipping-fast"></i>
                     </div>
-                    <h3>سرعة التوصيل</h3>
-                    <p>توصيل سريع وآمن لجميع أنحاء مصر</p>
+                    <h3>شحن سريع</h3>
+                    <p>توصيل سريع وآمن لجميع أنحاء الجمهورية</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
@@ -101,7 +100,7 @@
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
-                        <i class="fas fa-users"></i>
+                        <i class="fas fa-clock"></i>
                     </div>
                     <h3>خبرة 15+ سنة</h3>
                     <p>خبرة طويلة في مجال مستلزمات الفنادق والمستشفيات</p>
