--- a/products.html
+++ b/products.html
@@ -54,9 +54,9 @@
                 <h1>منتجاتنا</h1>
                 <p>تصفح مجموعتنا الواسعة من مستلزمات الفنادق والمستشفيات عالية الجودة</p>
                 <div style="margin-top: 1.5rem;">
-                    <a href="catalog.html" class="btn btn-primary">
-                        <i class="fas fa-book"></i>
-                        عرض الكتالوج الكامل
+                    <a href="https://drive.google.com/file/d/1J_PIcgGuMCs4dFetSiAj8ObP7-Sleb5G/view" target="_blank" class="btn btn-primary">
+                        <i class="fas fa-download"></i>
+                        تحميل الكتالوج الكامل PDF
                     </a>
                 </div>
             </div>
